# app/routes/api.php
@@ -6,6 +6,8 @@ use App\Http\Controllers\Admin\UserController;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function () {
+    Route::get('/exchange', Nelwhix\CurrencyExchange\Controllers\CurrencyExchangeController::class);
+
     Route::prefix('admin')->group(function () {
         Route::post('/create', [RegisteredUserController::class, 'store']);
         Route::post('/login', [AuthenticatedSessionController::class, 'store']);
